fixed documentation
